src/objects/Assignment_Rule_Criteria_Based_Rule__c.object
<CustomObject>
    <description>This object holds data related to criteria based assignment rules</description>
    <fields>
        <fullName>Assignment_Rule_Entry_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment Rule Entry Criteria</label>
        <referenceTo>Assignment_Rule_Entry__c</referenceTo>
        <relationshipLabel>Assignment Rule Criteria Based Rules</relationshipLabel>
        <relationshipName>Assignment_Rule_Criteria_Based_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment Rule</label>
        <referenceTo>Assignment_Rule__c</referenceTo>
        <relationshipLabel>Assignment Rule Criteria Based Rules</relationshipLabel>
        <relationshipName>Assignment_Rule_Criteria_Based_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieldType__c</fullName>
        <label>FieldType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOOLEAN</fullName>
                </value>
                <value>
                    <fullName>CURRENCY</fullName>
                </value>
                <value>
                    <fullName>DATE</fullName>
                </value>
                <value>
                    <fullName>DATETIME</fullName>
                </value>
                <value>
                    <fullName>TIME</fullName>
                </value>
                <value>
                    <fullName>DOUBLE</fullName>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>INTERGER</fullName>
                </value>
                <value>
                    <fullName>PERCENT</fullName>
                </value>
                <value>
                    <fullName>PICKLIST</fullName>
                </value>
                <value>
                    <fullName>MULTIPICKLIST</fullName>
                </value>
                <value>
                    <fullName>STRING</fullName>
                </value>
                <value>
                    <fullName>TEXTAREA</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>REFERENCE</fullName>
                </value>
                <value>
                    <fullName>PHONE</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>ANYASSIGN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <description>The label for filtered field</description>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
                <value>
                    <fullName>within</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SObject_Type__c</fullName>
        <label>SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Assignment Rule Criteria Based Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AREC-{0000}</displayFormat>
        <label>Assignment Rule Criteria Based Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Rule Criteria Based Rules</pluralLabel>
    <recordTypes>
        <fullName>Assignment_Rule_Criteria</fullName>
        <active>true</active>
        <description>criteria for assignment rules</description>
        <label>Assignment Rule - Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assignment_Rule_Entry_Criteria_Criteria</fullName>
        <active>true</active>
        <description>Assignment rule entry criteria</description>
        <label>Assignment Rule Entry Criteria - Criteria</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>